--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/ChangePasswordPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/ChangePasswordPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
+             xmlns:i18n="clr-namespace:ExpensesManagment.Prism.Helpers"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="ExpensesManagment.Prism.Views.ChangePasswordPage"
              BackgroundColor="{StaticResource ColorBackgroud}"
@@ -21,41 +22,41 @@
 
                     <Label Grid.Column="0"
                 	       Grid.Row="0"
-                	       Text="Current Password"
+                	       Text="{i18n:Translate CurrentPassword}"
                 	       VerticalOptions="Center"/>
 
                     <Entry Grid.Column="1"
                 	       Grid.Row="0"
                 	       IsPassword="True"
-                	       Placeholder="Current Password"
+                	       Placeholder="{i18n:Translate CurrentPassword}"
                 	       Text="{Binding CurrentPassword}"/>
 
                     <Label Grid.Column="0"
                 	       Grid.Row="1"
-                	       Text="New Password"
+                	       Text="{i18n:Translate NewPassword}"
                 	       VerticalOptions="Center"/>
 
                     <Entry Grid.Column="1"
                 	       Grid.Row="1"
                 	       IsPassword="True"
-                	       Placeholder="New Password"
+                	       Placeholder="{i18n:Translate NewPassword}"
                            Text="{Binding NewPassword}"/>
 
                     <Label Grid.Column="0"
                 	       Grid.Row="2"
-                	       Text="Confirm New Password"
+                	       Text="{i18n:Translate NewPassword}"
                 	       VerticalOptions="Center"/>
 
                     <Entry Grid.Column="1"
                 	       Grid.Row="2"
                 	       IsPassword="True"
-                	       Placeholder="New Password"
+                	       Placeholder="{i18n:Translate NewPassword}"
                 	       Text="{Binding PasswordConfirm}"/>
                 </Grid>
 
                 <Button Command="{Binding ChangePasswordCommand}"
             	        IsEnabled="{Binding IsEnabled}"
-            	        Text="Change Password"
+            	        Text="{i18n:Translate Save}"
                         VerticalOptions="EndAndExpand"/>
 
             </StackLayout>
@@ -67,7 +68,7 @@
                 	                       HorizontalOptions="Center"
                 	                       TextColor="{StaticResource ColorFontInverse}"
                 	                       IsVisible="{Binding IsRunning}"
-                	                       Title="Loading..."
+                	                       Title="{i18n:Translate Loading}"
                 	                       VerticalOptions="Center"
                 	                       ViewBoxWidth="80"
                 	                       ViewBoxHeight="80" />
