--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/AddTripPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/AddTripPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
+             xmlns:i18n="clr-namespace:ExpensesManagment.Prism.Helpers"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="ExpensesManagment.Prism.Views.AddTripPage"
              Title="{Binding Title}"
@@ -31,7 +32,7 @@
 
                         <Label Grid.Row="2"
                                Grid.Column="0"
-                               Text="User"
+                               Text="{i18n:Translate FirstName}"
                                VerticalOptions="Center"/>
                         <Label Grid.Row="2"
                                Grid.Column="1"
@@ -39,15 +40,15 @@
                                VerticalOptions="Center"/>
                         <Label Grid.Row="3"
                                Grid.Column="0"
-                               Text="City Visited"
+                               Text="{i18n:Translate CityVisited}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="3"
                                Grid.Column="1"
-                               Placeholder="Entry the city you've been visited"
+                               Placeholder="{i18n:Translate CityVisitedPlaceHolder}"
                                Text="{Binding Trip.CityVisited}"/>
                         <Label Grid.Row="4"
                                Grid.Column="0"
-                               Text="Start Date"
+                               Text="{i18n:Translate StartDate}"
                                VerticalOptions="Center"/>
                         <DatePicker Grid.Row="4"
                                Grid.Column="1"
@@ -56,7 +57,7 @@
                                Date="{Binding Trip.StartDate}"/>
                         <Label Grid.Row="5"
                                Grid.Column="0"
-                               Text="End Date"
+                               Text="{i18n:Translate EndDate}"
                                VerticalOptions="Center"/>
                         <DatePicker Grid.Row="5"
                                Grid.Column="1"
@@ -69,7 +70,7 @@
             <Button Command="{Binding AddCommand}"
                     HorizontalOptions="Center"
                     VerticalOptions="End"
-                    Text="Add Trip"
+                    Text="{i18n:Translate AddTrip}"
                     BackgroundColor="{StaticResource ColorDanger}"/>
         </StackLayout>
         <busyindicator:SfBusyIndicator AnimationType="ZoomingTarget" 
@@ -79,7 +80,7 @@
                 	                   HorizontalOptions="Center"
                 	                   TextColor="{StaticResource ColorFontInverse}"
                 	                   IsVisible="{Binding IsRunning}"
-                	                   Title="Loading..."
+                	                   Title="{i18n:Translate Loading}"
                 	                   VerticalOptions="Center"
                 	                   ViewBoxWidth="80"
                 	                   ViewBoxHeight="80" />
