--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/ModifyUserPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/ModifyUserPage.xaml
@@ -5,6 +5,7 @@
              xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+             xmlns:i18n="clr-namespace:ExpensesManagment.Prism.Helpers"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="ExpensesManagment.Prism.Views.ModifyUserPage"
              Title="{Binding Title}"
@@ -46,40 +47,40 @@
 
                         <Label Grid.Row="0"
                                Grid.Column="0"
-                               Text="Document"
+                               Text="{i18n:Translate Document}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="0"
                                Grid.Column="1"
                                Keyboard="Numeric"
-                               Placeholder="Entry your document"
+                               Placeholder="{i18n:Translate DocumentPlaceHolder}"
                                Text="{Binding User.Document}"/>
 
                         <Label Grid.Row="1"
                                Grid.Column="0"
-                               Text="First Name"
+                               Text="{i18n:Translate FirstName}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="1"
                                Grid.Column="1"
-                               Placeholder="Entry your first name"
+                               Placeholder="{i18n:Translate FirstNamePlaceHolder}"
                                Text="{Binding User.FirstName}"/>
 
                         <Label Grid.Row="2"
                                Grid.Column="0"
-                               Text="Last Name"
+                               Text="{i18n:Translate LastName}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="2"
                                Grid.Column="1"
-                               Placeholder="Entry your last name"
+                               Placeholder="{i18n:Translate LastNamePlaceHolder}"
                                Text="{Binding User.LastName}"/>
 
                         <Label Grid.Row="3"
                                Grid.Column="0"
-                               Text="Phone"
+                               Text="{i18n:Translate Phone}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="3" 
                                Grid.Column="1"
                                Keyboard="Telephone"
-                               Placeholder="Entry your phone number"
+                               Placeholder="{i18n:Translate PhonePlaceHolder}"
                                Text="{Binding User.PhoneNumber}"/>
                     </Grid>
                 </StackLayout>
@@ -88,10 +89,10 @@
                          VerticalOptions="EndAndExpand">
                 <Button Command="{Binding SaveCommand}"
                         IsEnabled="{Binding IsEnabled}"
-                        Text="Save"/>
+                        Text="{i18n:Translate Save}"/>
                 <Button Command="{Binding ChangePasswordCommand}"
                         IsEnabled="{Binding IsEnabled}"
-                        Text="Change Password"
+                        Text="{i18n:Translate ChangePassword}"
                         Style="{StaticResource DangerButton}"/>
             </StackLayout>
         </StackLayout>
@@ -102,7 +103,7 @@
                 	                   HorizontalOptions="Center"
                 	                   TextColor="{StaticResource ColorFontInverse}"
                 	                   IsVisible="{Binding IsRunning}"
-                	                   Title="Loading..."
+                	                   Title="{i18n:Translate Loading}"
                 	                   VerticalOptions="Center"
                 	                   ViewBoxWidth="80"
                 	                   ViewBoxHeight="80" />
