--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/RegisterPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/RegisterPage.xaml
@@ -5,6 +5,7 @@
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
              xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
+             xmlns:i18n="clr-namespace:ExpensesManagment.Prism.Helpers"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="ExpensesManagment.Prism.Views.RegisterPage"
              Title="{Binding Title}"
@@ -51,82 +52,82 @@
 
                         <Label Grid.Row="0"
                                Grid.Column="0"
-                               Text="Document"
+                               Text="{i18n:Translate Document}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="0"
                                Grid.Column="1"
                                Keyboard="Numeric"
-                               Placeholder="Entry your document"
+                               Placeholder="{i18n:Translate DocumentPlaceHolder}"
                                Text="{Binding User.Document}"/>
 
                         <Label Grid.Row="1"
                                Grid.Column="0"
-                               Text="First Name"
+                               Text="{i18n:Translate FirstName}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="1"
                                Grid.Column="1"
-                               Placeholder="Entry your first name"
+                               Placeholder="{i18n:Translate FirstNamePlaceHolder}"
                                Text="{Binding User.FirstName}"/>
 
                         <Label Grid.Row="2"
                                Grid.Column="0"
-                               Text="Last Name"
+                               Text="{i18n:Translate LastName}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="2"
                                Grid.Column="1"
-                               Placeholder="Entry your last name"
+                               Placeholder="{i18n:Translate LastNamePlaceHolder}"
                                Text="{Binding User.LastName}"/>
                         
                         <Label Grid.Row="4"
                                Grid.Column="0"
-                               Text="Email"
+                               Text="{i18n:Translate Email}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="4"
                                Grid.Column="1"
                                Keyboard="Email"
-                               Placeholder="Entry your email"
+                               Placeholder="{i18n:Translate EmailPlaceHolder}"
                                Text="{Binding User.Email}"/>
 
                         <Label Grid.Row="5"
                                Grid.Column="0"
-                               Text="Phone"
+                               Text="{i18n:Translate Phone}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="5" 
                                Grid.Column="1"
                                Keyboard="Telephone"
-                               Placeholder="Entry your phone number"
+                               Placeholder="{i18n:Translate PhonePlaceHolder}"
                                Text="{Binding User.Phone}"/>
 
                         <Label Grid.Row="6"
                                Grid.Column="0"
-                               Text="Password"
+                               Text="{i18n:Translate Password}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="6"
                                Grid.Column="1"
                                IsPassword="True"
-                               Placeholder="Entry your password"
+                               Placeholder="{i18n:Translate PasswordPlaceHolder}"
                                Text="{Binding User.Password}"/>
 
                         <Label Grid.Row="7"
                                Grid.Column="0"
-                               Text="Confirm Password"
+                               Text="{i18n:Translate ConfirmPassword}"
                                VerticalOptions="Center"/>
                         <Entry Grid.Row="7"
                                Grid.Column="1"
                                IsPassword="True"
-                               Placeholder="Entry your password"
+                               Placeholder="{i18n:Translate PasswordPlaceHolder}"
                                Text="{Binding User.PasswordConfirm}"/>
 
                         <Label Grid.Row="8"
                                Grid.Column="0"
-                               Text="Register As"
+                               Text="{i18n:Translate Role}"
                                VerticalOptions="Center"/>
                         <Picker Grid.Row="8"
                                 Grid.Column="1"
                                 ItemDisplayBinding="{Binding Name}"
                                 ItemsSource="{Binding Roles}"
                                 SelectedItem="{Binding Role}"
-                                Title="Select a role"
+                                Title="{i18n:Translate RolePlaceHolder}"
                                 BackgroundColor="{StaticResource ColorFontInverse}">
                         </Picker>
                     </Grid>
@@ -134,7 +135,7 @@
             </ScrollView>
             <Button Command="{Binding RegisterCommand}"
                     IsEnabled="{Binding IsEnabled}"
-                    Text="Register"/>
+                    Text="{i18n:Translate Register}"/>
         </StackLayout>
         <busyindicator:SfBusyIndicator AnimationType="ZoomingTarget" 
                                        AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
@@ -143,7 +144,7 @@
                 	                   HorizontalOptions="Center"
                 	                   TextColor="{StaticResource ColorFontInverse}"
                 	                   IsVisible="{Binding IsRunning}"
-                	                   Title="Loading..."
+                	                   Title="{i18n:Translate Loading}"
                 	                   VerticalOptions="Center"
                 	                   ViewBoxWidth="80"
                 	                   ViewBoxHeight="80" />
