--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/RememberPasswordPage.xaml
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Views/RememberPasswordPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
+             xmlns:i18n ="clr-namespace:ExpensesManagment.Prism.Helpers"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="ExpensesManagment.Prism.Views.RememberPasswordPage"
              BackgroundColor="{StaticResource ColorBackgroud}"
@@ -12,16 +13,16 @@
         <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1"
                         AbsoluteLayout.LayoutFlags="All" 
                         Padding="5">
-            <Label Text="Email"/>
+            <Label Text="{i18n:Translate Email}"/>
             <Entry Keyboard="Email"
                     HorizontalOptions="FillAndExpand"
-            	    Placeholder="Entry your email"
+            	    Placeholder="{i18n:Translate EmailPlaceHolder}"
             	    Text="{Binding Email}"/>
             <Button
             	Command="{Binding RecoverCommand}"
             	IsEnabled="{Binding IsEnabled}"
                 HorizontalOptions="FillAndExpand"
-            	Text="Recover"
+            	Text="{i18n:Translate RecoverPassword}"
                 VerticalOptions="EndAndExpand"/>
         </StackLayout>
         <busyindicator:SfBusyIndicator AnimationType="ZoomingTarget" 
@@ -31,7 +32,7 @@
                 	                   HorizontalOptions="Center"
                 	                   TextColor="{StaticResource ColorFontInverse}"
                 	                   IsVisible="{Binding IsRunning}"
-                	                   Title="Loading..."
+                	                   Title="{i18n:Translate Loading}"
                 	                   VerticalOptions="Center"
                 	                   ViewBoxWidth="80"
                 	                   ViewBoxHeight="80" />
